--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -2,16 +2,15 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.14.6\n"
+msgstr "Project-Id-Version: dpkg 1.14.6\n"
 "POT-Creation-Date: 2007-08-14 00:45+0200\n"
-"PO-Revision-Date: 2007-08-14 23:42+0100\n"
+"PO-Revision-Date: 2007-08-18 20:35+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 # type: Plain text
 #
@@ -520,16 +519,20 @@ msgid ""
 "which read new-format archives should be prepared for the minor number to be "
 "increased and new lines to be present, and should ignore these if this is "
 "the case."
-msgstr " "
+msgstr " Pierwszy sk³adnik, nazywa siê B<debian-binary> i zawiera seriê linii rozdzielonych znakami"
+" nowej linii. Obecnie plik ten zawiera tylko jedn± liniê - numer wersji formatu, który - w czasie pisania "
+"tej strony podrêcznika - wynosi³ B<2.0>. Programy obs³uguj±ce archiwa w nowym formacie powinny byæ "
+"gotowe na obs³u¿enie "
 
 # type: Plain text
 #: ../../man/deb.5:36
+#, fuzzy
 msgid ""
 "If the major number has changed, an incompatible change has been made and "
 "the program should stop. If it has not, then the program should be able to "
 "safely continue, unless it encounters an unexpected member in the archive "
 "(except at the end), as described below."
-msgstr ""
+msgstr "Je¿eli zmieni siê g³ówna liczba w wersji, "
 
 # type: Plain text
 #: ../../man/deb.5:46
@@ -734,7 +737,9 @@ msgid ""
 "This is a general field that gives the package a category based on the "
 "software that it installs. Some common sections are `utils', `net', `mail', "
 "`text', `x11' etc."
-msgstr ""
+msgstr "Jest to ogólne pole zawieraj±ce kategoriê pakietu bazowan± na oprogramowaniu, które zawiera. "
+"Niektóre czê¶ciej wystêpuj±ce sekcje to: `utils', `net', `mail', "
+"`text', `x11' itp."
 
 # type: TP
 #: ../../man/deb-control.5:58
@@ -744,10 +749,11 @@ msgstr "B<Priority:> E<lt>priorytet<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:62
+#, fuzzy
 msgid ""
 "Sets the importance of this package in relation to the system as a whole.  "
 "Common priorities are `required', `standard', `optional', `extra' etc."
-msgstr ""
+msgstr "Ustawia wa¿no¶æ pakietu w stosunku do ca³ego systemu. Zwykle w"
 
 # type: Plain text
 #: ../../man/deb-control.5:72
@@ -756,7 +762,9 @@ msgid ""
 "accepted values based on the Policy Manual.  They are used to decide how the "
 "packages are layed out in the archive.  A list of these values can be "
 "obtained from the latest version of the B<debian-policy> package."
-msgstr ""
+msgstr "W Debianie pola B<Section> i B<Pririty> maj± ¶ci¶le zdefiniowany zbiór akceptowalnych "
+"warto¶ci opisany w Zasadach Polityki Debiana. Okre¶laj± one po³o¿enie pakietu w archiwum. "
+"Listê tych warto¶ci mo¿na znale¼æ w najnowszej wersji pakietu B<debian-policy>."
 
 # type: TP
 #: ../../man/deb-control.5:72
@@ -771,7 +779,10 @@ msgid ""
 "package that is required for proper operation of the system. Dpkg or any "
 "other installation tool will not allow an B<Essential> package to be removed "
 "(at least not without using one of the force options)."
-msgstr ""
+msgstr "To pole jest u¿yteczne tylko gdy jego warto¶ci± jest `yes'. Oznacza ono, ¿e pakiet jest "
+"niezbêdny do poprawnego dzia³ania systemu. Ani dpkg, ani ¿adne inne narzêdzie instalacyjne nie pozwol± "
+"usun±æ pakietu oznaczonego jako B<Essential> (chyba ¿e u¿yje siê specjalnej opcji wymuszaj±cej usuniêcie "
+"takiego pakietu)."
 
 # type: TP
 #: ../../man/deb-control.5:79
@@ -787,7 +798,10 @@ msgid ""
 "etc. Note that the B<all> option is meant for packages that are architecture "
 "independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
-msgstr ""
+msgstr "Architektura okre¶la, dla jakiego typu maszyn pakiet zosta³ skompilowany. Zwyczajowe "
+"architektury to `i386', `m68k', `sparc', `alpha', `powerpc' itp. Uwaga: opcja B<all> oznacza, ¿e "
+"pakiet jest niezale¿ny od architektury - na przyk³ad zawiera tylko skrypty pow³oki lub Perla albo "
+"dokumentacjê."
 
 # type: TP
 #: ../../man/deb-control.5:87
@@ -800,7 +814,8 @@ msgstr "B<Source:> E<lt>nazwa ¼ród³aE<gt>"
 msgid ""
 "The name of the source package that this binary package came from, if "
 "different than the name of the package itself."
-msgstr ""
+msgstr "Nazwa pakietu ¼ród³owego, na podstawie którego zosta³ utworzony dany pakiet binarny, je¿eli jest "
+"ró¿na od nazwy tego pakietu binarnego."
 
 # type: TP
 #: ../../man/deb-control.5:91
@@ -831,7 +846,9 @@ msgid ""
 "List of packages that must be installed B<and> configured before this one "
 "can be installed. This is usually used in the case where this package "
 "requires another package for running its preinst script."
-msgstr ""
+msgstr "Lista pakietów, które musz± byæ zainstalowane B<oraz> skonfigurowane zanim ten pakiet "
+"bêdzie móg³ byæ zainstalowany. Zazwyczaj jest u¿ywane w przypadku gdy pakiet wymaga innego pakietu "
+"do uruchomienia swoich skryptów preinstalacyjnych."
 
 # type: TP
 #: ../../man/deb-control.5:108
@@ -841,11 +858,12 @@ msgstr "B<Recommends:> E<lt>lista pakietówE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:115
+#, fuzzy
 msgid ""
 "Lists packages that would be found together with this one in all but unusual "
 "installations. The package maintenance software will warn the user if they "
 "install a package without those listed in its B<Recommends> field."
-msgstr ""
+msgstr "Lista pakietów, które powinny siê znale"
 
 # type: TP
 #: ../../man/deb-control.5:115
@@ -859,7 +877,8 @@ msgid ""
 "Lists packages that are related to this one and can perhaps enhance its "
 "usefulness, but without which installing this package is perfectly "
 "reasonable."
-msgstr ""
+msgstr "Lista pakietów powi±zanych z tym pakietem, które mog± zwiêkszyæ jego u¿yteczno¶æ, "
+"ale bez których pakiet mo¿e siê obej¶æ."
 
 # type: Plain text
 #: ../../man/deb-control.5:132
@@ -870,7 +889,12 @@ msgid ""
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
 "pipes binding more tightly. Each package name is optionally followed by a "
 "version number specification in parentheses."
-msgstr ""
+msgstr "Warto¶ci± pól B<Depends>, B<Pre-Depends>, B<Recommends> i B<Suggests>"
+"jest lista grup alternatywnych pakietów. "
+"Ka¿da grupa jest list± pakietów oddzielonych symbolami pionowej kreski (`|'). Grupy oddzielone "
+"s± od siebie przecinkami. Przecinki maj± znaczenie `I' (koniunkcja), a kreski - `LUB' (alternatywa), przy czym "
+"priorytet jest koniunkcji jest wy¿szy."
+"Po ka¿dej nawie pakietu mo¿e opcjonalnie wystêpowaæ numer wersji podany w nawiasach."
 
 # type: Plain text
 #: ../../man/deb-control.5:138
@@ -880,7 +904,11 @@ msgid ""
 "(separated by a hyphen). Accepted version relationships are \"E<gt>E<gt>\" "
 "for greater than, \"E<lt>E<lt>\" for less than, \"E<gt>=\" for greater than "
 "or equal to, \"E<lt>=\" for less than or equal to, and \"=\" for equal to."
-msgstr ""
+msgstr "Numer wersji mo¿e zaczynaæ siê od `E<gt>E<gt>', co oznacza, ¿e ka¿da pó¼niejsza wersja pakietu bêdzie "
+"odpowiednia; mo¿na tak¿e podawaæ lub pomijaæ wersjê zmian Debiana (po znaku my¶lnika). Akceptowalne "
+"relacje s± nastêpuj±ce: \"E<gt>E<gt>\" - wiêkszy ni¿,"
+" \"E<lt>E<lt>\" - mniejszy ni¿, \"E<gt>=\" - wiêkszy lub równy, "
+"\"E<lt>=\" - mniejszy lub równy oraz \"=\" - równy."
 
 # type: TP
 #: ../../man/deb-control.5:138
@@ -1032,33 +1060,38 @@ msgid ""
 "The B<.deb> format is the Debian binary package file format. This manual "
 "page describes the B<old> format, used before Debian 0.93. Please see B<deb>"
 "(5)  for details of the new format."
-msgstr ""
+msgstr "Format B<.deb> jest formatem binarnego pakietu Debiana. Ta strona podrêcznika opisuje "
+"B<stary> format, u¿ywany przed wersj± 0.93 Debiana. Szczegó³y nowego formatu mo¿na znale¼æ w "
+"B<deb>(5)."
 
 # type: Plain text
 #: ../../man/deb-old.5:21
 msgid ""
 "The file is two lines of format information as ASCII text, followed by two "
 "concatenated gzipped ustar files."
-msgstr ""
+msgstr "Plik sk³ada siê z dwu linii informacji o formacie jako tekst ASCII, po których nastêpuj± "
+"dwa po³±czone pliki ustar spakowane gzipem."
 
 # type: Plain text
 #: ../../man/deb-old.5:25
 msgid ""
 "The first line is the format version number padded to 8 digits, and is "
 "B<0.939000> for all old-format archives."
-msgstr ""
+msgstr "Pierwsz± lini± jest numer wersji formatu, wyrównany do 8 cB<0.939000>yfr. Dla starego formatu numer"
+" ten wynosi B<0.939000>."
 
 # type: Plain text
 #: ../../man/deb-old.5:28
 msgid ""
 "The second line is a decimal string (without leading zeroes) giving the "
 "length of the first gzipped tarfile."
-msgstr ""
+msgstr "W drugiej linii jest zapisana liczba dziesiêtna (bez pocz±tkowych zer) podaj±ce d³ugo¶æ "
+"pierwszego zgzipowanego pliku tar."
 
 # type: Plain text
 #: ../../man/deb-old.5:30
 msgid "Each of these lines is terminated with a single newline character."
-msgstr ""
+msgstr "Ka¿da z tych linii jest zakoñczona pojedynczym znakiem nowej linii."
 
 # type: Plain text
 #: ../../man/deb-old.5:35
@@ -1066,17 +1099,19 @@ msgid ""
 "The first tarfile contains the control information, as a series of ordinary "
 "files. The file B<control> must be present, as it contains the core control "
 "information."
-msgstr ""
+msgstr "Pierwszy plik tar zawiera informacje kontrolne, jako seriê zwyczajnych plików. "
+"Zawsze musi byæ obecny plik B<control> zawieraj±cy g³ówne informacje kontrolne."
 
 # type: Plain text
 #: ../../man/deb-old.5:46
+#, fuzzy
 msgid ""
 "In some very old archives, the files in the control tarfile may optionally "
 "be in a B<DEBIAN> subdirectory. In that case, the B<DEBIAN> subdirectory "
 "will be in the control tarfile too, and the control tarfile will have only "
 "files in that directory. Optionally the control tarfile may contain an entry "
 "for `B<.>', that is, the current directory."
-msgstr ""
+msgstr "W bardzo starych archiwach, plik "
 
 # type: Plain text
 #: ../../man/deb-old.5:50
@@ -1130,7 +1165,8 @@ msgstr ""
 msgid ""
 "The override file has a simple whitespace-delimited format. Comments are "
 "allowed (denoted with a B<#>)."
-msgstr ""
+msgstr "Plik nadpisañ ma prosty format pól rozdzielonych bia³ymi znakami (spacjami). Dozwolone s± "
+"komentarze (zaczynaj±ce siê od B<#>)."
 
 # type: Plain text
 #: ../../man/deb-override.5:39
@@ -1142,7 +1178,8 @@ msgstr "I<pakiet> I<priorytet> I<sekcja> [I<informacje-o-opiekunie>]"
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
 "packages not found in the tree of binary packages are ignored."
-msgstr ""
+msgstr "I<pakiet> jest nazw± pakietu. Ignorowane s± wpisy w pliku nadpisañ dotycz±ce pakietów nie znajduj±cych siê w "
+"drzewie pakietów binarnych."
 
 # type: Plain text
 #: ../../man/deb-override.5:53
@@ -1187,7 +1224,7 @@ msgstr "2007-03-08"
 # type: Plain text
 #: ../../man/deb-shlibs.5:19
 msgid "deb-shlibs - Debian shared library information file"
-msgstr ""
+msgstr "deb-shlibs - plik z informacjami o bibliotekach wspó³dzielonych w Debianie"
 
 # type: Plain text
 #: ../../man/deb-shlibs.5:22
@@ -1204,7 +1241,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/deb-shlibs.5:28
 msgid "E<lt>library nameE<gt> E<lt>version/sonameE<gt> E<lt>dependenciesE<gt>"
-msgstr ""
+msgstr "E<lt>nazwa bibliotekiE<gt> E<lt>wersja/sonameE<gt> E<lt>zale¿no¶ciE<gt>"
 
 # type: TP
 #: ../../man/deb-shlibs.5:30
@@ -1266,7 +1303,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/deb-substvars.5:48
 msgid "Additionally, the following standard variables are available:"
-msgstr ""
+msgstr "Dodatkowo dostêpne s± nastêpuj±ce standardowe zmienne:"
 
 # type: TP
 #: ../../man/deb-substvars.5:48
@@ -1315,7 +1352,7 @@ msgstr "B<binary:Version>"
 msgid ""
 "The binary package version (which may differ from source:Version in a binNMU "
 "for example)."
-msgstr ""
+msgstr "Wersja pakietu binarnego (mo¿e siê ró¿niæ od source:Version na przyk³ad w przypadku binNMU)."
 
 # type: TP
 #: ../../man/deb-substvars.5:63
@@ -1325,11 +1362,14 @@ msgstr "B<Source-Version>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:68
+#, fuzzy
 msgid ""
 "The source package version (from the changelog file). This variable is now "
 "B<deprecated> as its meaning is different from its function, please use the "
 "B<source:Version> or B<binary:Version> as appropriate."
-msgstr ""
+msgstr "Wersja pakietu ¼ród³owego (z pliku zmian). Ta zmienna jest obecnie B<przestarza³a>, jako ¿e jej "
+"znaczenie jest inne ni¿ jej funkcja. Prosimy u¿ywaæ B<source:Version> lub B<binary:Version>, w zale¿no¶ci "
+"od wymagañ."
 
 # type: TP
 #: ../../man/deb-substvars.5:68
@@ -1404,7 +1444,7 @@ msgstr ""
 #: ../../man/deb-substvars.5:106
 #, fuzzy, no-wrap
 msgid "B<shlibs:>I<dependencyfield>"
-msgstr "deb-shlibs"
+msgstr "B<shlibs:>I<pole_zale¿no¶ci>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:110
@@ -1440,7 +1480,8 @@ msgstr "Pe³na wersja programu dpkg."
 msgid ""
 "If a variable is referred to but not defined it generates a warning and an "
 "empty value is assumed."
-msgstr ""
+msgstr "Je¿eli jest odwo³anie do niezdefiniowanej zmiennej, to generowane jest ostrze¿enie i przyjmowana jest "
+"pusta warto¶æ zmiennej."
 
 # type: TP
 #: ../../man/deb-substvars.5:121
@@ -2829,7 +2870,8 @@ msgid ""
 "Change default administrative directory, which contains many files that give "
 "information about status of installed or uninstalled packages, etc.  "
 "(Defaults to I</var/lib/dpkg>)"
-msgstr ""
+msgstr "Zmiana domy¶lnego katalogu administracyjnego, zawieraj±cego wiele plików dostarczaj±cych informacji "
+"o stanie zainstalowanych i niezainstalowanych pakietów itp. (Warto¶æ domy¶lna to I</var/lib/dpkg>)."
 
 # type: TP
 #: ../../man/dpkg.1:461
@@ -2847,7 +2889,7 @@ msgid ""
 "B<chroot>(2) before running package's installation scripts, which means that "
 "the scripts see B<instdir> as a root directory.  (Defaults to I</>)"
 msgstr ""
-"Zmiana domy¶lnych katalogów. B<admindir> to domy¶lnie I</var/lib/dpkg>, "
+"Zmiana domy¶lnego katalogu instalacyjnego, który  katalogów. B<admindir> to domy¶lnie I</var/lib/dpkg>, "
 "gdzie przechowywane s± informacje o stanie zainstalowanych i "
 "niezainstalowanych pakietów, itp. B<instdir> to domy¶lnie I</> i oznacza "
 "katalog, w którym zostan± zainstalowane pliki. B<instdir> oznacza równie¿ "
@@ -2868,7 +2910,8 @@ msgstr "B<--root=>I<katalog>"
 msgid ""
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
-msgstr ""
+msgstr "Zmiana B<root> zmienia B<instdir> na I<katalog> i B<admindir> na I<katalog>B</"
+"var/lib/dpkg>."
 
 # type: TP
 #: ../../man/dpkg.1:472
@@ -3341,7 +3384,7 @@ msgstr "2007-03-06"
 #: ../../man/dpkg-architecture.1:4
 msgid ""
 "dpkg-architecture - set and determine the architecture for package building"
-msgstr ""
+msgstr "dpkg-architecture - ustawia i zwraca architekturê budowania pakietów."
 
 # type: Plain text
 #
@@ -4443,9 +4486,8 @@ msgstr "B<-uc>"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:159
-#, fuzzy
 msgid "Do not sign the .changes file."
-msgstr "Nie próbuje podpisywaæ pakietów."
+msgstr "Nie próbuje podpisywaæ plików .changes."
 
 # type: TP
 #: ../../man/dpkg-buildpackage.1:159 ../../man/dpkg-source.1:108
@@ -6537,13 +6579,12 @@ msgstr "dpkg-scanpackages - tworzy pliki indeksowe Sources"
 
 # type: Plain text
 #: ../../man/dpkg-scansources.1:13
-#, fuzzy
 msgid ""
 "B<dpkg-scansources> [I<options>] I<binary-dir> [I<override-file> [I<path-"
 "prefix>]] B<E<gt>> I<Sources>"
 msgstr ""
-"B<dpkg-scanpackages> [I<opcje>] I<katalog-binarny> [I<plik-nadpisañ> "
-"[I<prefiks-¶cie¿ki>]] B<E<gt>> I<Packages>"
+"B<dpkg-scansources> [I<opcje>] I<katalog-binarny> [I<plik-nadpisañ> "
+"[I<prefiks-¶cie¿ki>]] B<E<gt>> I<Sources>"
 
 # type: Plain text
 #: ../../man/dpkg-scansources.1:18
@@ -10813,3 +10854,4 @@ msgstr ""
 #: ../../man/update-alternatives.8:405
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
+
