--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     Thanks to Ian Jackson.
   * Fix perl warnings:
     - When removing a non diverted file with dpkg-divert. Closes: #438416
+  * Implement support for Homepage field. Closes: #142324
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
