Update e-mail address of Colin Watson in THANKS file.

--- a/THANKS
+++ b/THANKS
@@ -12,7 +12,7 @@ Charles Briscoe-Smith <cpbs@debian.org>
 Christian Haggstrom <chm@c00.info>
 Christophe Le Bars <clebars@teaser.fr>
 Colin Plumb <colin@nyx.net>
-Colin Watson <cjw44@flatline.org.uk>
+Colin Watson <cjwatson@debian.org>
 Dan Gohman <gohmandj@mrs.umn.edu>
 Daniel Jacobowitz <dan@debian.org>
 Darren Stalder <torin@daft.com>
