Add bug closure for incorrrectly named FILES section in man page

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     - Unify ellipsis, argument separator, and remove redundant program name
       preceding the options.
     - Substitute 'FILES' header with 'SEE ALSO' in dpkg-buildpackage(1),
-      and remove leftover string from man page split.
+      and remove leftover string from man page split. Closes: #439306
     - Split option descriptions so that it gets easier to distinguish.
     - Unify author and copyright information formatting.
   * Move variables automatically modified at build time for the perl scripts
