--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-24  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Allow a package stanza to override the
+	Homepage field from the source stanza.
+
 2007-08-20  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (arbitrary_fields): New variable.
