--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-24  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 929t.
+
 2007-08-18  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
