--- a/po/sv.po
+++ b/po/sv.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.13.11.0.1\n"
+"Project-Id-Version: dpkg 1.14.6\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-08-18 03:58+0300\n"
-"PO-Revision-Date: 2007-07-29 11:58+0100\n"
+"PO-Revision-Date: 2007-08-25 16:04+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -795,14 +795,14 @@ msgid "failed to read `%s' at line %d"
 msgstr "kunde inte öppna \"%s\" på rad %d"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s: i fil \"%.255s\" nära rad %d"
+msgstr "varning, i fil \"%.255s\" nära rad %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s: i fil \"%.255s\" nära rad %d"
+msgstr "tolkningsfel, i fil \"%.255s\" nära rad %d"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -899,9 +899,9 @@ msgid "error setting permissions of `%.255s'"
 msgstr "fel när behörighet för \"%.255s\" skulle ställas in"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "kunde inte ställa in körrättigheter på \"%.250s\""
+msgstr "kunde inte ta status på (avreferera) befintlig symbolisk länk \"%.250s\""
 
 #: src/archives.c:360
 #, c-format
@@ -909,24 +909,24 @@ msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
 msgstr ""
+"kunde inte ta status på (avreferera) föreslaget nytt mål \"%.250s\" "
+"för symbolisk länk \"%.250s\""
 
-# ??!?!?
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
 msgstr ""
 "försökte skriva över \"%.250s\", vilket är den omdirigerade varianten av "
-"\"%.250s\"%.10s%.100s%.10s"
+"\"%.250s\" (paket: %.100s)"
 
-# ??!?!?
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
 msgstr ""
 "försökte skriva över \"%.250s\", vilket är den omdirigerade varianten av "
-"\"%.250s\"%.10s%.100s%.10s"
+"\"%.250s\""
 
 #: src/archives.c:440
 #, c-format
@@ -1059,61 +1059,62 @@ msgid "unable to install new version of `%.255s'"
 msgstr "kunde inte installera ny version av \"%.255s\""
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: varning - ignorerar beroendeproblem vid borttagning av %s:\n"
+"dpkg: varning - ignorerar beroendeproblem med %s:\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
 "dpkg: varning - funderar på att avkonfigurera det systemkritiska\n"
-" paketet %s för att kunna ta bort %s.\n"
+" paketet %s för att aktivera %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
 "dpkg: nej, %s är systemkritiskt, kommer inte att avkonfigurera\n"
-" det för att möjliggöra borttagning av %s.\n"
+" det för att aktivera %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg: nej, kan inte ta bort %s (--auto-deconfigure hjälper):\n"
+"dpkg: nej, kan fortsätta med %s (--auto-deconfigure hjälper):\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "läsfel i %.250s"
+msgstr "borttagning av %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "kunde inte installera ny version av \"%.255s\""
+msgstr "installation av \"%.255s\""
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg: funderar på att ta bort %s till förmån för %s ...\n"
+msgstr ""
+"dpkg: funderar på att avkonfigurera %s, vilket skulle förstöras av %s ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: ja, kommer att ta bort %s till förmån för %s.\n"
+msgstr "dpkg: ja, kommer att avkonfigurera %s (förstörs av %s).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1125,9 +1126,9 @@ msgstr ""
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: varning - ignorerar konflikt, kan ändå fortsätta!\n"
+msgstr "dpkg: varning - ignorerar förstörelse, kan ändå fortsätta!\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1135,11 +1136,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"installation av %.250s skulle förstöra %.250s, och\n"
+" avkonfigurering tillåts inte (--auto-deconfigure kanske hjälper)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "installation av %.250s skulle förstöra befintliga program"
 
 #: src/archives.c:978
 #, c-format
@@ -2678,19 +2681,18 @@ msgid "  Package %s is not installed.\n"
 msgstr "  Paketet %s är ej installerat.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s tillhandahåller %.250s och är %s.\n"
+msgstr " %s (%s) förstör %s och är %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (underprocess): %s\n"
+msgstr "  %s (%s) tillhandahåller %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  Versionen av %s på systemet är %s.\n"
+msgstr "  Versionen av %s som skall konfigureras är %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2819,14 +2821,14 @@ msgid "error trying to open %.250s"
 msgstr "fel vid öppning av %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
-msgstr "Avkonfigurerar %s så att vi kan ta bort %s ...\n"
+msgstr "Avkonfigurerar %s, så att vi kan ta bort %s ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Tar bort %s ...\n"
+msgstr "Avkonfigurerar %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -2983,24 +2985,24 @@ msgid "No packages found matching %s.\n"
 msgstr "Inga paket matchar %s.\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "omdirigerat av %s till: %s\n"
+msgstr "omdirigering av %s från: %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "omdirigerat av %s till: %s\n"
+msgstr "omdirigering av %s till: %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "lokal omdirigering"
+msgstr "lokal omdirigering från: %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "lokalt omdirigerad till: %s\n"
+msgstr "lokal omdirigering till: %s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
