Updated translation of manual page.
Updated Swedish translation to 1285t.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -928,23 +928,22 @@ msgstr ""
 
 # type: TP
 #: ../../man/deb-control.5:138
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Breaks:> E<lt>package listE<gt>"
-msgstr "B<Replaces:> E<lt>paketlistaE<gt>"
+msgstr "B<Breaks:> E<lt>paketlistaE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:146
-#, fuzzy
 msgid ""
 "Lists packages that this one breaks, for example by exposing bugs when the "
 "named packages rely on this one. The package maintenance software will not "
 "allow broken packages to be configured; generally the resolution is to "
 "upgrade the packages named in a B<Breaks> field."
 msgstr ""
-"Listar paket som är i konflikt (krockar) med detta, till exempel genom att "
-"innehålla filer med samma namn. Pakethanteringsprogramvaran tillåter inte "
-"två sådana paket att vara installerade samtidigt. Två paket med inbördes "
-"konflikt bör innehålla en B<Conflicts>-rad med varandras namn."
+"Listar paket som förstörs av detta, till exempel genom att lyfta fram "
+"fel när det namngivna paketet beror på detta. Pakethanteringsprogramvaran "
+"tillåter inte att förstörda paket konfigureras; problemet löses "
+"vanligtvis genom att uppgradera paketen som namnges i ett B<Breaks>-fält."
 
 # type: TP
 #: ../../man/deb-control.5:146
@@ -2637,7 +2636,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg.1:377
 msgid "B<breaks>: Install, even if this would break another package."
-msgstr ""
+msgstr "B<breaks>: Installera, även om det skulle förstöra ett annat paket."
 
 # type: Plain text
 #: ../../man/dpkg.1:381
@@ -6360,7 +6359,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-query.1:130
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "    B<Architecture>\n"
 "    B<Bugs>\n"
@@ -6397,6 +6396,7 @@ msgstr ""
 "    B<Conffiles>\n"
 "    B<Config-Version>\n"
 "    B<Conflicts>\n"
+"    B<Breaks>\n"
 "    B<Depends>\n"
 "    B<Description>\n"
 "    B<Enhances>\n"
