--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-25  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1285t.
+
 2007-08-20  Guillem Jover  <guillem@debian.org>
 
 	* deb-control.5: Document Homepage field.
