--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-08-28  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Fix regression introduced on commit
+	from 2007-08-08, which was producing a warning due to usage of
+	uninitialized variables.
+
+2007-08-28  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl: Add comments about the second pass
 	parsing for dependency fields. Remove handling of uninteresting fields
 	in the second pass parsing.
