Started translating the scripts PO file.
Committed partial translation to Git to avoid losing strings again the next
time gtranslator refuses to save the file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
+  * Swedish (Peter Karlsson).
 
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Closes: #430931
