--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-29  Peter Karlsson <peterk@debian.org>
+
+	* LINGUAS, sv.po: Added Swedish
+
 2007-08-18  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
