Ran spelling checker.

--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.6\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-07-01 15:54+0200\n"
-"PO-Revision-Date: 2007-08-30 19:50+0100\n"
+"PO-Revision-Date: 2007-08-30 19:55+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,15 +31,13 @@ msgstr "kan inte hämta inloggningsinformation för användar-id \"%s\""
 
 #: scripts/controllib.pl:80
 #, perl-format
-msgid ""
-"no utmp entry available and LOGNAME not defined; using uid of process (%d)"
-msgstr ""
-"hittar ingen post i utmp och LOGNAME är inte definierat; använder användar-id av process (%d)"
+msgid "no utmp entry available and LOGNAME not defined; using uid of process (%d)"
+msgstr "hittar ingen post i utmp och LOGNAME är inte definierat; använder användar-id av process (%d)"
 
 #: scripts/controllib.pl:83
 #, perl-format
 msgid "unable to get login information for uid %d"
-msgstr "kan inte hämta inloggingsinformation för användar-id %d"
+msgstr "kan inte hämta inloggningsinformation för användar-id %d"
 
 #: scripts/controllib.pl:139
 msgid "unable to open cputable"
@@ -51,7 +49,7 @@ msgstr "kan inte öppna ostable"
 
 #: scripts/controllib.pl:173
 msgid "unable to open triplettable"
-msgstr "kan inte öppna tirplettable"
+msgstr "kan inte öppna triplettable"
 
 #: scripts/controllib.pl:337
 #, perl-format
@@ -145,7 +143,7 @@ msgstr "namnet på källkodspaketet \"%s\" innehåller ogiltigt tecken \"%s\""
 #: scripts/controllib.pl:571
 #, perl-format
 msgid "source package name `%s' starts with non-alphanum"
-msgstr "namnet på källkodspaketet \"%s\" börar med icke-alfanumeriskt tecken"
+msgstr "namnet på källkodspaketet \"%s\" börjar med icke-alfanumeriskt tecken"
 
 #: scripts/controllib.pl:577
 #, perl-format
@@ -312,7 +310,7 @@ msgstr ""
 "  -e<debian-ark>     jämför med nuvarande Debianarkitektur.\n"
 "  -i<ark-alias>      kontrollera om nuvarande Debianarkitektur är <ark-alias>.\n"
 "  -q<variabel>       skriver bara ut värdet på <variabel>.\n"
-"  -s                 skriv kommandon för att sätta mijövariabler.\n"
+"  -s                 skriv kommandon för att sätta miljövariabler.\n"
 "  -u                 skriv kommandon för att ta bort värde från miljövariabler.\n"
 "  -c <kommando>      ställ in miljö och kör kommandot i den.\n"
 "  --help             visa detta hjälpmeddelande.\n"
@@ -328,10 +326,8 @@ msgstr ""
 
 #: scripts/dpkg-architecture.pl:102
 #, perl-format
-msgid ""
-"Unknown gcc system type %s, falling back to default (native compilation)"
-msgstr ""
-"Okänd gcc-systemtyp %s, faller tillbaka på standard (lokal kompilering)"
+msgid "Unknown gcc system type %s, falling back to default (native compilation)"
+msgstr "Okänd gcc-systemtyp %s, faller tillbaka på standard (lokal kompilering)"
 
 #: scripts/dpkg-architecture.pl:156 scripts/dpkg-distaddfile.pl:56
 #: scripts/dpkg-genchanges.pl:163 scripts/dpkg-gencontrol.pl:124
@@ -354,7 +350,7 @@ msgstr "okänd GNU-systemtyp %s, du måste också ange en Debianarkitektur"
 #: scripts/dpkg-architecture.pl:172
 #, perl-format
 msgid "unknown default GNU system type for Debian architecture %s"
-msgstr "okänd förvald GNU-systemtyp för Debianrkitektur %s"
+msgstr "okänd förvald GNU-systemtyp för Debianarkitektur %s"
 
 #: scripts/dpkg-architecture.pl:175
 #, perl-format
@@ -363,7 +359,7 @@ msgid ""
 "system type %s"
 msgstr ""
 "Förvald GNU-systemtyp %s för Debianarkitekturen %s stämmer inte med den "
-"angivnga GNU-systemtypen %s"
+"angivna GNU-systemtypen %s"
 
 #: scripts/dpkg-architecture.pl:183
 #, perl-format
@@ -518,7 +514,7 @@ msgstr ""
 "  -c<control-fil>          hämta styrinformation från denna fil.\n"
 "  -l<ändringsloggfil>      hämta per-version-information från denna fil.\n"
 "  -f<fillistfil>           hämta .deb-fillistan från denna fil.\n"
-"  -v<sedanversion>         ta mede alla ändringar senare än denna version.\n"
+"  -v<sedanversion>         ta med alla ändringar senare än denna version.\n"
 "  -C<ändringsbeskrivning>  använd ändringsbeskrivning från denna fil.\n"
 "  -m<ansvarig>             överstyr ansvarigvärde från styrfilen.\n"
 "  -e<ansvarig>             överstyr ansvarigvärde från ändringsloggen.\n"
@@ -543,7 +539,7 @@ msgstr "kan inte kombinera -b eller -B och -S"
 #: scripts/dpkg-genchanges.pl:124
 #, perl-format
 msgid "%s: arch-specific upload - not including arch-independent packages"
-msgstr "%s: arkiturspecifik insändning - inkluderar inte ark.-oberoende paket"
+msgstr "%s: arkitekturspecifik insändning - inkluderar inte ark.-oberoende paket"
 
 #: scripts/dpkg-genchanges.pl:172
 msgid "cannot read files list file"
@@ -986,7 +982,8 @@ msgstr ""
 msgid ""
 " ! Package %s (filename %s) is repeat;\n"
 "   ignored that one and using data from %s !\n"
-msgstr " ! Paketet %s (filnamn) repeterades;\n"
+msgstr ""
+" ! Paketet %s (filnamn) repeterades;\n"
 "   ignorerade den och använde data från %s!\n"
 
 #: scripts/dpkg-scanpackages.pl:203
@@ -1241,7 +1238,7 @@ msgid ""
 msgstr ""
 "Använd: %s [<flagga> ...] <binär>|-e<binär> [<flagga> ...]\n"
 "\n"
-"Postionsberoende flaggor (ordningen har betydelse):\n"
+"Positionsberoende flaggor (ordningen har betydelse):\n"
 "  <binär>                  ta med beroenden för <binär>,\n"
 "  -e<binär>                (använd -e om <binär> börjar med \"-\")\n"
 "  -d<beroendefält>         nästa binär(er) sätter shlibs:<beroendefält>.\n"
@@ -1561,7 +1558,6 @@ msgid ""
 msgstr ""
 "originalargument är tomt (betyder ingen orig, ingen diff) men "
 "källkodshanteringstypen -s%s ber om något"
-""
 
 #: scripts/dpkg-source.pl:370
 #, perl-format
@@ -1776,7 +1772,8 @@ msgstr "innehåll i binär fil ändrat"
 #: scripts/dpkg-source.pl:568
 #, perl-format
 msgid "file %s has no final newline (either original or modified version)"
-msgstr "filen %s har inget avslutande nyradstecken (antingen i ursprunglig eller "
+msgstr ""
+"filen %s har inget avslutande nyradstecken (antingen i ursprunglig eller "
 "modifierad version)"
 
 #: scripts/dpkg-source.pl:572
@@ -2212,8 +2209,7 @@ msgstr "filnamnet \"%s\" trunkerades av cpio; kan inte kontrollera komplett sökv
 
 #: scripts/dpkg-source.pl:1170
 #, perl-format
-msgid ""
-"tarfile `%s' contains unexpected object listed by tar as `%s'; expected `%s'"
+msgid "tarfile `%s' contains unexpected object listed by tar as `%s'; expected `%s'"
 msgstr "tarfilen \"%s\" innehåller oväntat objekt som tar visar som \"%s\"; förväntade \"%s\""
 
 #: scripts/dpkg-source.pl:1179
