Fixed some inconsistencies.

--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -766,7 +766,7 @@ msgstr "måste ange paket eftersom styrinfo har flera (%s)"
 #: scripts/dpkg-gencontrol.pl:178
 #, perl-format
 msgid "`%s' is not a legal architecture string."
-msgstr "\"%s\" är inte en giltig arkitektursträng"
+msgstr "\"%s\" är inte en giltig arkitektursträng."
 
 #: scripts/dpkg-gencontrol.pl:184
 #, perl-format
@@ -983,7 +983,7 @@ msgid ""
 " ! Package %s (filename %s) is repeat;\n"
 "   ignored that one and using data from %s !\n"
 msgstr ""
-" ! Paketet %s (filnamn) repeterades;\n"
+" ! Paketet %s (filnamn %s) repeterades;\n"
 "   ignorerade den och använde data från %s!\n"
 
 #: scripts/dpkg-scanpackages.pl:203
@@ -994,7 +994,7 @@ msgstr " ! Paketet %s (filnamn %s) har Filename-fält!\n"
 #: scripts/dpkg-scanpackages.pl:209
 #, perl-format
 msgid "`md5sum < %s' exited with %d"
-msgstr "\"md5sum < %s\" avslutade med %s"
+msgstr "\"md5sum < %s\" avslutade med %d"
 
 #: scripts/dpkg-scanpackages.pl:210
 #, perl-format
@@ -2154,7 +2154,7 @@ msgid ""
 "an out of date version of cpio.  GNU cpio 2.4.2-2 is known to work"
 msgstr ""
 "första utdata från cpio -0t (från \"%s\") innehåller nyrad - du har antagligen "
-"en för gammal version av cpio. GNU cpio 2.4.2-2 vet vi fungerar."
+"en för gammal version av cpio. GNU cpio 2.4.2-2 vet vi fungerar"
 
 #: scripts/dpkg-source.pl:1064
 #, perl-format
