Ignore XB- instead of XC- fields from control file binary package stanzas
dpkg-genchanges was wrongly trying to ignore XC- fields (which was a no-op,
those being handled already) when it should have been ignoring XB-.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-30  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Ignore XB- fields instead of XC- fields
+	from control file binary package stanzas.
+
 2007-08-28  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl: Fix regression introduced on commit
