--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Fix perl warnings:
     - When removing a non diverted file with dpkg-divert. Closes: #438416
   * Implement support for Homepage field. Closes: #142324
+  * Ignore XB- fields instead of XC- fields from control file binary package
+    stanzas in dpkg-genchanges.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
