Properly warn on unknown fields in dpkg-genchanges
Explicitely ignore all known fields from the control file source package
stanza in dpkg-genchanges, instead of leaving unknown fields unwarned.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-31  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Do not leave unknown fields unwarned
+	and explicitely ignore all known ones from control file source
+	package stanza.
+
 2007-08-30  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Ignore XB- fields instead of XC- fields
