Support Vcs-* fields in control file source package stanza
The supported fields are Vcs-Browser, Vcs-Arch, Vcs-Bzr, Vcs-Cvs,
Vcs-Darcs, Vcs-Git, Vcs-Hg, Vcs-Mtn and Vcs-Svn.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-08-31  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-genchanges.pl: Ignore Vcs-Browser, Vcs-Arch, Vcs-Bzr,
+	Vcs-Cvs, Vcs-Darcs, Vcs-Git, Vcs-Hg, Vcs-Mtn and Vcs-Svn fields
+	from control file source stanza.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-source.pl: Parse them instead.
+	(@dsc_fields): Add them here.
+
+2007-08-31  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-genchanges.pl: Do not leave unknown fields unwarned
 	and explicitely ignore all known ones from control file source
 	package stanza.
