--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     stanzas in dpkg-genchanges.
   * Explicitely ignore all known fields from the control file source package
     stanza in dpkg-genchanges, instead of leaving unknown fields unwarned.
+  * Implement support for Vcs-Browser, Vcs-Arch, Vcs-Bzr, Vcs-Cvs, Vcs-Darcs,
+    Vcs-Git, Vcs-Hg, Vcs-Mtn and Vcs-Svn fields in control file source
+    package stanza.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
