--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Implement support for Vcs-Browser, Vcs-Arch, Vcs-Bzr, Vcs-Cvs, Vcs-Darcs,
     Vcs-Git, Vcs-Hg, Vcs-Mtn and Vcs-Svn fields in control file source
     package stanza.
+  * Implement support for Tag field.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
