--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -127,6 +127,7 @@ alignment will be used. The following \fIfield\fRs are recognised:
     \fBSource\fP
     \fBStatus\fP
     \fBSuggests\fP
+    \fBTag\fP
     \fBVersion\fP
 .fi
 
