Nepali translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,7 +45,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Closes: #430931
   * Swedish (Peter Karlsson).
-  * Nepali (Shiva Prasad Pokharel). Closes: #435353
+  * Nepali (Shiva Prasad Pokharel). Closes: #435353, #437825
   * Russian (Yuri Kozlov). Closes: #436147
   * Polish (Robert Luberda).
 
