--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-26  Shiva Prasad Pokharel  <pokharelshiv@gmail.com>
+
+	* ne.po: Updated to 903t23f3u. 
+
 2007-08-25  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 929t.
